Slowly figuring out user authentication

--- a/unit4/apps/unit4/priv/login_form.html
+++ b/unit4/apps/unit4/priv/login_form.html
@@ -15,12 +15,10 @@
         <li>
           <label for="username">Name:</label>
           <input type="text" id="username" name="username" value="~s">
-          <span class="error" id="username_error">~s</span>
         </li>
         <li>
-          <label for="mail">Password:</label>
+          <label for="password">Password:</label>
           <input type="password" id="password" name="password" value="~s">
-          <span class="error" id="password_error">~s</span>
         </li>
         <li class="button">
           <button type="submit">Login</button>
