Nearly done with user authentication

--- a/unit4/apps/unit4/priv/welcome.html
+++ b/unit4/apps/unit4/priv/welcome.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>~s's Home Page</title>
-    <link rel="stylesheet" href="/styles/basic.css">
+    <link rel="stylesheet" href="/styles/form.css">
   </head>
   <body>
     <div class="login-area">~s <a class="login-link" href="/logout">Logout</a></div>
