--- a/unit4/apps/unit4/priv/signup_form.html
+++ b/unit4/apps/unit4/priv/signup_form.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Signup</title>
-    <link rel="stylesheet" href="/styles/basic.css">
+    <link rel="stylesheet" href="/styles/form.css">
   </head>
   <body>
     <div class="login-area">
