User authentication nearly done

--- a/unit4/apps/unit4/priv/login_form.html
+++ b/unit4/apps/unit4/priv/login_form.html
@@ -14,11 +14,11 @@
       <ul>
         <li>
           <label for="username">Name:</label>
-          <input type="text" id="username" name="username" value="~s">
+          <input type="text" id="username" name="username" value="~s" required minlength="6">
         </li>
         <li>
           <label for="password">Password:</label>
-          <input type="password" id="password" name="password" value="~s">
+          <input type="password" id="password" name="password" required minlength="6">
         </li>
         <li class="button">
           <button type="submit">Login</button>
