--- a/unit4/apps/unit4/priv/signup_form.html
+++ b/unit4/apps/unit4/priv/signup_form.html
@@ -9,7 +9,7 @@
     <div class="login-area">
       <a class="login-link" href="/login">Login</a>
     </div>
-    <form name="login" onsubmit="return validateSignupForm()" method="POST">
+    <form name="signup" onsubmit="return validateSignupForm()" method="POST">
       <h2>Signup</h2>
       <ul>
         <li>
