User authentication with improved Javascript promises

--- a/unit4/apps/unit4/priv/login_form.html
+++ b/unit4/apps/unit4/priv/login_form.html
@@ -28,7 +28,7 @@
              value="Some big secret that nobody should be able to read, but unfortunately anybody can">
       <span class="error" id="login_error">~s</span>
     </form>
-    <script src="/scripts/userid_cookie.js"></script>
+    <script src="/scripts/getid.js"></script>
     <script src="/scripts/login.js"></script>
   </body>
 </html>
