--- a/unit4/apps/unit4/priv/signup_form.html
+++ b/unit4/apps/unit4/priv/signup_form.html
@@ -37,7 +37,7 @@
       <input type="hidden" id="salt" name="salt" 
              value="Some big secret that nobody should be able to read, but unfortunately anybody can">
     </form>
-    <script src="/scripts/userid_cookie.js"></script>
+    <script src="/scripts/getid.js"></script>
     <script src="/scripts/signup.js"></script>
   </body>
 </html>
