Redoing Ajax, work in progress

--- a/unit6/apps/unit6/priv/login_form.html
+++ b/unit6/apps/unit6/priv/login_form.html
@@ -20,13 +20,13 @@
           <input type="password" id="password" name="password" required minlength="6">
         </li>
         <li class="button">
-          <button id="ajaxButton" type="button">Login</button>
+          <button id="loginButton" type="button">Login</button>
         </li>
       </ul>
       <input type="hidden" id="salt" name="salt" 
              value="Some big secret that nobody should be able to read, but unfortunately anybody can">
       <span class="error" id="login_error"></span>
-    <script src="/scripts/userid_cookie.js"></script>
+    <script src="/scripts/getid.js"></script>
     <script src="/scripts/login.js"></script>
   </body>
 </html>
