--- a/unit6/apps/unit6/priv/signup_form.html
+++ b/unit6/apps/unit6/priv/signup_form.html
@@ -35,7 +35,7 @@
     </ul>
     <input type="hidden" id="salt" name="salt" 
            value="Some big secret that nobody should be able to read, but unfortunately anybody can">
-    <script src="/scripts/userid_cookie.js"></script>
+    <script src="/scripts/getid.js"></script>
     <script src="/scripts/signup.js"></script>
   </body>
 </html>
