--- a/unit6/apps/unit6/priv/index.html
+++ b/unit6/apps/unit6/priv/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Logout</title>
+    <title>Index</title>
   </head>
   <body>
-    <script src="/scripts/logout.js"></script>
+    <script src="/scripts/index.js"></script>
   </body>
 </html>
