Redoing Ajax, work in progress

--- a/unit6/apps/unit6/priv/signup_form.html
+++ b/unit6/apps/unit6/priv/signup_form.html
@@ -30,7 +30,7 @@
         <input type="text" id="email" name="email">
       </li>
       <li class="button">
-        <button id="ajaxButton" type="button">Subscribe</button>
+        <button id="signupButton" type="button">Subscribe</button>
       </li>
     </ul>
     <input type="hidden" id="salt" name="salt" 
