--- a/unit6/apps/unit6/priv/welcome.html
+++ b/unit6/apps/unit6/priv/welcome.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>~s's Home Page</title>
-    <link rel="stylesheet" href="/styles/form.css">
+    <link rel="stylesheet" href="/styles/main.css">
   </head>
   <body>
-    <div class="login-area">~s <a class="login-link" href="/logout">Logout</a></div>
+    <nav class="login-area"><span id="name">~s</span> | <a class="login-link" href="/logout">Logout</a></nav>
     <h1>Welcome ~s!</h1>
+    <script src="/scripts/welcome.js"></script>
   </body>
 </html>
 
